--- a/style.css
+++ b/style.css
@@ -35,9 +35,8 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     padding: 0.5rem;
     background-color: var(--bg-primary);
 
@@ -47,6 +46,7 @@ body {
         align-items: center;
         height: 2rem;
         padding: 0 1rem 0 1rem;
+        margin-bottom: 0.5rem;
 
         .theme-switcher {
             display: flex;
@@ -106,7 +106,8 @@ body {
         display: flex;
         flex-direction: row;
         width: 100%;
-        height: 100%;
+        flex: 1;
+        min-height: 0;
 
         /* .content-code {
           见下方
@@ -115,6 +116,9 @@ body {
         .content-data {
             display: flex;
             flex-direction: column;
+            flex-grow: 0;
+            flex-shrink: 0;
+            min-height: 0;
 
             .content-input {
                 display: flex;
@@ -122,6 +126,7 @@ body {
                 background: var(--bg-secondary);
                 border-radius: 0.75rem;
                 overflow: hidden;
+                min-height: 0;
 
                 .input-title {
                     padding: 0 1rem;
@@ -210,6 +215,7 @@ body {
                 background: var(--bg-secondary);
                 border-radius: 0.75rem;
                 overflow: hidden;
+                min-height: 0;
 
                 .output-title {
                     padding: 0 1rem;
@@ -238,6 +244,7 @@ body {
                     padding: 0.5rem;
                     display: flex;
                     flex-direction: column;
+                    min-height: 0;
                 }
 
                 .output-content {
@@ -255,6 +262,7 @@ body {
                     border-radius: 0.5rem;
                     color: var(--text-primary);
                     background-color: var(--bg-tertiary);
+                    min-height: 0;
                     
 
                     &.empty {
@@ -286,6 +294,9 @@ body {
 .content-code {
     display: flex;
     flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
+    min-height: 0;
     border-radius: 0.75rem;
     background-color: var(--bg-secondary);
     overflow: hidden;
