--- a/style.css
+++ b/style.css
@@ -116,8 +116,7 @@ body {
         .content-data {
             display: flex;
             flex-direction: column;
-            flex-grow: 0;
-            flex-shrink: 0;
+            flex: 0 1 44%;
             min-height: 0;
 
             .content-input {
@@ -159,7 +158,7 @@ body {
                         background-color: var(--bg-tertiary);
                         width: 100%;
                         flex: 1;
-                        border-radius: 0.5rem;
+                        border-radius: 0.3rem;
                         border: 1px solid var(--border-color);
                         padding: 0.75rem;
                         resize: none;
@@ -259,7 +258,7 @@ body {
                     white-space: pre-wrap;
                     word-break: break-all;
                     border: 1px solid var(--border-color);
-                    border-radius: 0.5rem;
+                    border-radius: 0.3rem;
                     color: var(--text-primary);
                     background-color: var(--bg-tertiary);
                     min-height: 0;
@@ -294,8 +293,7 @@ body {
 .content-code {
     display: flex;
     flex-direction: column;
-    flex-grow: 0;
-    flex-shrink: 0;
+    flex: 0 1 56%;
     min-height: 0;
     border-radius: 0.75rem;
     background-color: var(--bg-secondary);
